--- a/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
+++ b/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.html
@@ -48,15 +48,7 @@
 
       <div class="col-md-8">
 
-        <p class="lead ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non ipsum fugiat dicta eaque
-          et
-          reiciendis, enim, totam iusto quis atque possimus dolor! Vitae error dolorem voluptatum laborum minima
-          iusto
-          qui ipsa rem perferendis illo. In eum placeat aperiam porro impedit veritatis, dolorum quos blanditiis
-          eos
-          eligendi soluta cupiditate modi quaerat corporis, ex ab voluptatem rem perspiciatis, maiores
-          asperiores? Quia,
-          mollitia. </p>
+        <p class="lead ">Soluções inteligentes que transformam informação em conhecimento e geraram produtividade e precisão. Não encontre clientes para o seu produto, encontre produtos para os  seus clientes.</p>
       </div>
     </div>
   </div>
