--- a/FrontEnd/eRural/src/app/menu-produtor/menu-produtor.component.html
+++ b/FrontEnd/eRural/src/app/menu-produtor/menu-produtor.component.html
@@ -3,21 +3,16 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div class="collapse navbar-collapse menuBar text-center m-auto" id="conteudoNavbarSuportado">
+    <div class="collapse navbar-collapse menuBar text-center ml-auto" id="conteudoNavbarSuportado">
       <ul class="navbar-nav m-auto">
         <li class="nav-item active">
-          <a class="nav-link ml-3" href="#"><img src="https://i.imgur.com/vEJY0PZ.png" alt="logo" width="120px" height="31px" class="img-fluid"> <span class="sr-only">(página atual)</span></a>
+          <a class="nav-link mr-5" href="#"><img src="https://i.imgur.com/vEJY0PZ.png" alt="logo" width="120px" height="31px" class="img-fluid"> <span class="sr-only">(página atual)</span></a>
         </li>
 
-          <form class="form-inline ">
-              <div>
-                <input class="form-control mr-xl-2" style="min-width: 600px;" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-              </div>
-          </form>
+          
         
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle fontMenu mr-3 ml-5" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle fontMenu mr-5" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Minha conta
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -29,7 +24,7 @@
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle fontMenu mr-3" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle fontMenu mr-5" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Meus Produtos
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -39,6 +34,15 @@
             <a class="dropdown-item fontMenu" href="#">Cancelamento</a> <!--o vendedor pode cancelar uma venda-->
           </div>
         </li>
+      
+          <form class="form-inline  ml-5 ">
+            <div>
+              <input class="form-control mr-xl-2" style="min-width: 500px;" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+            </div>
+        </form>
+        
+  
       </ul>
     </div>
   </nav>
