--- a/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.css
+++ b/FrontEnd/eRural/src/app/inicio-cliente/inicio-cliente.component.css
@@ -53,7 +53,7 @@
 	top:10px;
 	right:20px;
 	font-weight: bold;
-	color: #ff4faf;
+	color: #6fd119;
 }
 
 .card1
@@ -70,7 +70,7 @@
 	padding: 5px;
 	color: #fff;
 	margin: 15px 0 0;
-	background: #ff4faf;
+	background: #397900;
 	text-align: center;
 	text-decoration: none;
 	transition: .3s;
@@ -80,5 +80,5 @@
 .card1:hover
 {
 	color: #fff;
-	background: #ff209a;
+	background-color: #313131;
 }
