--- a/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.css
+++ b/FrontEnd/eRural/src/app/inicio-produtor/inicio-produtor.component.css
@@ -69,7 +69,7 @@
 	top:10px;
 	right:20px;
 	font-weight: bold;
-	color: #ff4faf;
+	color: #6fd119;
 }
 
 .card1
@@ -86,7 +86,7 @@
 	padding: 5px;
 	color: #fff;
 	margin: 15px 0 0;
-	background: #ff4faf;
+	background: #397900;
 	text-align: center;
 	text-decoration: none;
 	transition: .3s;
@@ -96,6 +96,6 @@
 .card1:hover
 {
 	color: #fff;
-	background: #ff209a;
+	background-color: #313131;
 }
 /*/CARD*/
