--- a/FrontEnd/eRural/src/app/ajuda/ajuda.component.html
+++ b/FrontEnd/eRural/src/app/ajuda/ajuda.component.html
@@ -1,53 +1,127 @@
 <div class="container-fluid">
-    <div class="row mt-5 mb-5">
-        <div class="col-md-6 mt-5">
-            <h1>Como funciona a e-Rural?</h1>
+  <div class="row mt-5 mb-5">
+    <div class="col-md-12 mt-5">
+      <div class="jumbotron jumbotron-fluid bg-success text-white">
+        <div class="container">
+          <h1 class="display-4">Como funciona a e-Rural?</h1>
+          <p class="lead">Abaixo você pode conferir informações sobre o projeto E-Rural.</p>
+        </div>
+      </div>
+
+
+      <div class="container-fluid">
+
+        <div class="row mt-5 mb-5 align-items-center">
+
+          <div class="col-md-6 mt-5">
+
             <h3>Cadastro</h3>
+
             <p>
-                Tanto o consumidor quando o vendedor realizam o cadastro em nossa plataforma, para assim terem acesso a
-                toda usabilidade que oferecemos. Suas informações estão seguras conosco!
+              Tanto o consumidor quando o vendedor realizam o cadastro em nossa plataforma, para assim terem acesso a
+              toda usabilidade que oferecemos. Suas informações estão seguras conosco!
             </p>
             <h3>Compra ou venda?</h3>
             <p>
-                Ao criar seu cadastro, você irá escolher seu perfil, ou seja, escolha entre consumidor e produtor
-                O perfil de consumidor pode realizar compras e o perfil de Produtor pode realizar vendas. Lembre-se de verificar as diretrizes de nossa comunicadade.
+              Ao criar seu cadastro, você irá escolher seu perfil, ou seja, escolha entre consumidor e produtor
+              O perfil de consumidor pode realizar compras e o perfil de Produtor pode realizar vendas. Lembre-se de
+              verificar as diretrizes de nossa comunicadade.
             </p>
-            <h3>Venda</h3>
-            <p>
-                Vendeu um produto? Excelente!
-                Combine com o comprador a entrega!
-                Siga os padrões de higiêne na entrega.
-            </p>
-            <h3>Compra</h3>
-            <p>
-                Comprou algum produto? Excelente! Você acaba de dar um passo a mais para a boa saúde e alimentação!
-                Combine com o vendedor a entrega!
-                Lembre-se de seguir os padrões de higiêne.
-            </p>
-            <h3>Feedback</h3>
-            <p>
-                Já realizou a compra ou venda? Dê um feedback tanto do comprador quanto do vendedor é fundamental para
-                melhorarmos cada vez mais!.
-            </p>
+          </div>
+
+          <div class="col-md-6 ">
+
+            <img src="https://imgur.com/PcYOXyB.png" height="500px" width="500px" alt="Imagem de dúvida">
+
+          </div>
 
         </div>
 
+
+        <div class="row d-flex justify-content-center">
+
+         <div class="col-md-8 justify-content-center mb-5">
+            <h3 class="text-center">Venda</h3>
+            <p>
+              Vendeu um produto? Excelente!
+              Combine com o comprador a entrega!
+              Siga os padrões de higiêne na entrega.
+            </p>
+         </div>
+       </div>
+
+       <div class="row d-flex justify-content-center">
+
+        <div class="col-md-8 justify-content-center">
+          <h3 class="text-center">Compra</h3>
+          <p class="d-flex justify-content-center">
+            Comprou algum produto? Excelente! Você acaba de dar um passo a mais para a boa saúde e alimentação!
+            Combine com o vendedor a entrega!
+            Lembre-se de seguir os padrões de higiêne.
+          </p>
+        </div>
+      </div>
+
+
+      <div class="row d-flex justify-content-end mt-5 align-items-center">
+
+        <div class="col-md-6">
+          <img src="https://imgur.com/sSIiEnj.png" height="500px" width="500px" alt="Imagem de dúvida">
+        </div>
+
+
+
+        <div class="col-md-6 justify-content-end">
+          <h3>Feedback</h3>
+          <p>
+            Já realizou a compra ou venda? Dê um feedback tanto do comprador quanto do vendedor é fundamental para
+            melhorarmos cada vez mais!.
+          </p>
+          <p>
+            Valorizamos o feedback e entendemos que só será possível evoluir com a participação de todos.
+          </p>
+        </div>
+      </div>
+
+      </div>
+
+      <div class="row align-items-center">
         <div class="col-md-6 mt-5">
-            <h1>Principais dúvidas sobre Pagamento:</h1>
+          <h1>Principais dúvidas sobre Pagamento:</h1>
 
-            <h3>Quais são as formas de pagamento?</h3>
-            <p>
-                Aceitamos como forma de pagamento: Cartão de crédito em até 12X sem juros, boleto e até mesmo débito em
-                conta.
-            </p>
-            <h3>Quero realizar o cancelamento mas já efetuei o pagamento e agora?</h3>
-            <p>Você consumidor, efetuou o pagamento mas não quer mais receber o produto?
-                Sem problemas, basta ir em "minhas compras" e efetuar o cancelamento da mesma!
-                Você receberá seu estorno diretamente em seu cartão. Caso a compra tenha sido realizada via boleto
-                , iremos enviar um formulário para que informe uma conta para ser feito o estorno.
-            </p>
+          <h3>Quais são as formas de pagamento?</h3>
+          <p>
+            Aceitamos como forma de pagamento: Cartão de crédito em até 12X sem juros, boleto e até mesmo débito em
+            conta.
+          </p>
+          <h3>Quero realizar o cancelamento mas já efetuei o pagamento e agora?</h3>
+          <p>Você consumidor, efetuou o pagamento mas não quer mais receber o produto?
+            Sem problemas, basta ir em "minhas compras" e efetuar o cancelamento da mesma!
+            Você receberá seu estorno diretamente em seu cartão. Caso a compra tenha sido realizada via boleto
+            , iremos enviar um formulário para que informe uma conta para ser feito o estorno.
+          </p>
 
         </div>
+
+        <div class="col-md-6">
+
+          <img src="https://imgur.com/7CJGn1z.png"  alt="erural" height="500px" width="500px">
+
+        </div>
+
+
+
+
+      </div>
+
+
+
+
+
 
     </div>
+
+
+
+  </div>
 </div>
