crude cat e prod funcionais completo

--- a/FrontEnd/eRural/src/app/lista-produto/lista-produto.component.html
+++ b/FrontEnd/eRural/src/app/lista-produto/lista-produto.component.html
@@ -20,8 +20,8 @@
                 <label>Quantidade: {{item.quantidade}}</label><br>
                 <label>Peso: {{item.peso}}</label>
 
-                <a class="text-info mr-3" [routerLink]="['/editar-produto', item.id]" >Editar</a>
-                  <a class="text-danger" [routerLink]="['/delete-produto', item.id]">Apagar</a>
+                <a class="text-info mr-3">Comprar Agora</a> <!--ADICIONAR ROTA FAKE-->
+                  <a class="text-danger">Adicionar ao Carrinho</a> <!--ADD ROTA FAKE-->
 
             </div>
         </div>
