--- a/FrontEnd/eRural/src/app/admin/admin.component.html
+++ b/FrontEnd/eRural/src/app/admin/admin.component.html
@@ -30,40 +30,45 @@
 
 
         <div class="tab-content texto" id="nav-tabContent">
+          <!--TODASCATEGORIAS-->
           <div class="tab-pane fade show active" id="todasCategorias" role="tabpanel"
             aria-labelledby="nav-todasPostagens-tab">
-
-            <div class="card-columns">
-              <div class="card text-center m-2" *ngFor='let item of listaCategoria'>
-                <div class="card-body">
-                  <div><img src='{{item.imagem}}' width="70" height="100"></div>
-                  <h5 class="card-title m-0">{{item.nome}}</h5>
-                  <p class="card-text mt-3">{{item.descricao}}</p>
-
-                  <a class="text-info mr-3" [routerLink]="['/categoria-edit', item.id]" >Editar</a>
-                  <a class="text-danger" [routerLink]="['/categoria-delete', item.id]">Apagar</a>
-
-                </div>
+            <div class="product card mr-3 mt-5 ml-3 mb-5" *ngFor='let item of listaCategoria'>
+              <div class="imgbox">
+                <img src='{{item.imagem}}'>
+              </div>
+              <div class="details">
+                <h5 class="card-title m-0">{{item.nome}}</h5>
+                <p class="card-text mt-3">{{item.descricao}}</p>
+                <a class="card1" [routerLink]="['/categoria-edit', item.id]">Editar</a>
+                <a class="card2" [routerLink]="['/categoria-delete', item.id]">Apagar</a>
               </div>
             </div>
+            <!--/TODASCATEGORIAS-->
 
           </div>
           <div class="tab-pane fade show active" id="categoriaProdutos" role="tabpanel">
-            <div class="card-columns" *ngFor='let categoria of listaCategoria'>
-              <div class="card text-center m-2" *ngFor='let item of categoria.produtos'>
-                <div class="card-body">
-                  <div><img src='{{item.imagem}}' width="70" height="100"></div>
+
+            <div class="product card mr-3 mt-5 ml-3 mb-5" *ngFor='let categoria of listaCategoria'>
+              <div *ngFor='let item of categoria.produtos'>
+                <div class="imgbox">
+                  <img src='{{item.imagem}}'>
+                </div>
+                <div class="details">
                   <h5 class="card-title m-0">{{item.nome}}</h5>
                   <p class="card-text mt-3">Categoria: {{categoria.nome}}</p>
                   <p class="card-text mt-3">{{item.descricao}}</p>
                   <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
-                  <!-- <a class="text-danger" [routerLink]="['/categoria-delete', item.id]">Apagar</a> COLOCAR ROUTER LINK DO PRODUTO-DELETE! -->
+
+                  <a class="card2" [routerLink]="['/delete-produto', item.id]">Apagar</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="tab-pane fade d-flex justify-content-center" id="Criar" role="tabpanel" aria-labelledby="nav-criar-tab">
+
+          <div class="tab-pane fade d-flex justify-content-center" id="Criar" role="tabpanel"
+            aria-labelledby="nav-criar-tab">
             <!--FORMULARIO-->
             <div class="col-md-6">
               <div id="formExemplo" data-toggle="validator" role="form">
