--- a/FrontEnd/eRural/src/app/delete/produtos-delete/produtos-delete.component.html
+++ b/FrontEnd/eRural/src/app/delete/produtos-delete/produtos-delete.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="row mt-5">
         <div class="col-md-12 d-flex justify-content-center">
-            <button class="btn btn-danger" routerLink='/listaProdutos'>Não</button>
+            <button class="btn btn-danger" routerLink='/cadastro-produto'>Não</button>
             <button class="btn btn-success" (click)='apagar()'>Sim</button>
         </div>
     </div>
