--- a/FrontEnd/eRural/src/app/inicial/inicial.component.html
+++ b/FrontEnd/eRural/src/app/inicial/inicial.component.html
@@ -1,33 +1,4 @@
-
-  <div class="jumbotron jumbotron-fluid jumbotronBackground">
-    <div class="container">
-      <h1 class="display-4">eRural</h1>
-      <h2>Alimentação saudável é fundamental</h2>
-      <p class="lead">Deixe sua vida mais saúdavel por um preço acessível.</p>
-      <p>É um produtor? Cadastre-se e venha vender seus produtos e ajudar a comunidade carente!</p>
-    </div>
-  </div>
-
-  <div class="jumbotron jumbotron-fluid jumbotronBackground">
-    <div class="container">
-      <h1 class="display-4">eRural</h1>
-      <h2>Alimentação saudável é fundamental</h2>
-      <p class="lead">Deixe sua vida mais saúdavel por um preço acessível.</p>
-      <p>É um produtor? Cadastre-se e venha vender seus produtos e ajudar a comunidade carente!</p>
-    </div>
-  </div>
-
-  <div class="jumbotron jumbotron-fluid jumbotronBackground">
-    <div class="container">
-      <h1 class="display-4">eRural</h1>
-      <h2>Alimentação saudável é fundamental</h2>
-      <p class="lead">Deixe sua vida mais saúdavel por um preço acessível.</p>
-      <p>É um produtor? Cadastre-se e venha vender seus produtos e ajudar a comunidade carente!</p>
-    </div>
-  </div>
-
-
-
+<div class="mt-5">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -54,3 +25,61 @@
       <span class="sr-only">Próximo</span>
     </a>
   </div>
+</div>
+
+<div class="jumbotron jumbotron-fluid jumbotronBackground">
+  <div class="container">
+    <h1 class="display-4">eRural</h1>
+    <h2>Alimentação saudável é fundamental</h2>
+    <p class="lead">Deixe sua vida mais saúdavel por um preço acessível.</p>
+    <p>É um produtor? Cadastre-se e venha vender seus produtos e ajudar a comunidade carente!</p>
+    <p>É um cliente? Verifique os produtos disponíveis em nossa plataforma!</p>
+  </div>
+</div>
+
+
+  <div class="row">
+    <div class="col-md-12">
+
+      <div class="container-fluid d-flex">
+        <div class="row mb-5 mt-5 m-auto">
+
+            <div class="product card mr-3 mt-5 ml-3 mb-5">
+              <div class="imgbox">
+                <img src="https://i.imgur.com/v2Tyk5a.png">
+              </div>
+              <div class="details">
+                <h2 class="text-center">Vegetais<br><span>Frescos</span></h2>
+                <a class="card1" routerLink="/cadastro-produto">Cadastre seus produtos!</a>
+                <!--CARRINHO-->
+              </div>
+            </div>
+
+            <div class="product card mr-3 mt-5 ml-3 mb-5">
+              <div class="imgbox">
+                <img src="https://i.imgur.com/v2Tyk5a.png">
+              </div>
+              <div class="details">
+                <h2 class="text-center">Frutas<br><span>Fresquinhas e deliciosas!</span></h2>
+                <a class="card1" routerLink="/login">Compre Agora!</a>
+                <!--CARRINHO-->
+              </div>
+            </div>
+
+            <div class="product card mr-3 mt-5 ml-3 mb-5">
+              <div class="imgbox">
+                <img src="https://i.imgur.com/8nICsK8.png">
+              </div>
+              <div class="details">
+                <h2 class="text-center">Ferramentas <br><span>Itens utilizados em plantio</span></h2>
+                <a class="card1" routerLink="/login">Compre Agora!</a>
+                <!--CARRINHO-->
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
