--- a/FrontEnd/eRural/src/app/menu/menu.component.html
+++ b/FrontEnd/eRural/src/app/menu/menu.component.html
@@ -5,8 +5,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse menuBar align-items-center text-center m-auto" id="conteudoNavbarSuportado">
-    <ul class="navbar-nav">
+  <div class="collapse navbar-collapse menuBar align-items-center text-center" id="conteudoNavbarSuportado">
+    <ul class="navbar-nav d-flex justify-content-start">
 
       <li class="nav-item active">
         <a class="nav-link ml-3" href="#"><img src="https://i.imgur.com/vEJY0PZ.png" alt="logo" width="120px"
@@ -15,7 +15,7 @@
 
 
 
-        <ul class="align-items-center justify-content-center">
+        <ul class="navbar-nav d-flex justify-content-center">
           <form class="form-inline">
             <div>
               <input class="form-control mr-xl-2 ml-5" style="min-width: 60px;" type="search" placeholder="Pesquisar"
@@ -29,9 +29,11 @@
 
 
 
+
+
       <!--Home-->
-        <div class="d-flex justify-content-center">
-          <ul class=" navbar-nav mr-auto">
+
+          <ul class=" navbar-nav ml-auto pr-5 align-items-center d-flex justify-content-end">
             <li *ngIf='mudarMenu()==false' class="nav-item active ">
               <a class="nav-link mr-3 aling" routerLink='/inicio'>Início</a>
             </li>
@@ -48,7 +50,7 @@
               <a class="nav-link mr-3  " routerLink='/admin'>Adminstrador</a>
             </li>
             </ul>
-        </div>
+
 
 
       <!--Home-->
