--- a/FrontEnd/eRural/src/app/admin/admin.component.html
+++ b/FrontEnd/eRural/src/app/admin/admin.component.html
@@ -11,7 +11,7 @@
       <div class="container" id="postagens">
         <!--NAV-->
         <nav>
-          <ul class="nav nav-tabs justify-content-center text-center d-flex" id="myTab" role="tablist">
+          <ul class=" nav nav-tabs justify-content-center text-center d-flex" id="myTab" role="tablist">
             <li class="nav-item">
               <a class="nav-link active" id="todas" data-toggle="tab" href="#todasCategorias" role="tab"
                 aria-controls="nav-todas-tab" aria-selected="true">Todas Categorias</a>
@@ -25,6 +25,7 @@
                 aria-selected="false">Adicionar Categoria</a>
             </li>
           </ul>
+          <hr>
         </nav>
         <!--/NAV-->
 
@@ -44,9 +45,10 @@
                 <a class="card2" [routerLink]="['/categoria-delete', item.id]">Apagar</a>
               </div>
             </div>
+          </div>
             <!--/TODASCATEGORIAS-->
 
-          </div>
+
           <div class="tab-pane fade show active" id="categoriaProdutos" role="tabpanel">
 
             <div class="product card mr-3 mt-5 ml-3 mb-5" *ngFor='let categoria of listaCategoria'>
@@ -58,7 +60,7 @@
                   <h5 class="card-title m-0">{{item.nome}}</h5>
                   <p class="card-text mt-3">Categoria: {{categoria.nome}}</p>
                   <p class="card-text mt-3">{{item.descricao}}</p>
-                  <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+                  <p class="card-text"><small class="text-muted">Postado por: {{item.usuario.nome}}</small></p>
 
                   <a class="card2" [routerLink]="['/delete-produto', item.id]">Apagar</a>
                 </div>
