parte produtor ok

--- a/FrontEnd/eRural/src/app/menu/menu.component.html
+++ b/FrontEnd/eRural/src/app/menu/menu.component.html
@@ -76,7 +76,7 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         <a class="dropdown-item fontMenu" routerLink='/cadastro-produto'>Cadastrar Produto</a>
-        <a class="dropdown-item fontMenu" routerLink='/listaProdutos'>Produtos</a>
+        <a class="dropdown-item fontMenu" routerLink='/minha-conta'>Produtos</a>
         <a class="dropdown-item fontMenu" (click)='sair()'>Sair</a>
       </div>
       </li>
