--- a/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
+++ b/FrontEnd/eRural/src/app/produto-produtor/produto-produtor.component.html
@@ -8,7 +8,7 @@
           <h3>Aqui você cria, edita e deleta seus Produtos</h3>
         </div>
         <div class="col-md-6">
-          <img class="img-fluid" src="https://i.imgur.com/MZQ4V94.png" alt="">
+          <img class="img-fluid" src="https://i.imgur.com/kL1eOUb.png" alt="">
         </div>
       </div>
       <!--MENU-->
@@ -38,32 +38,33 @@
           <div class="tab-pane fade show active" id="todosProdutos" role="tabpanel"
             aria-labelledby="nav-todasPostagens-tab">
             <!--LISTA CATEGORIAS-->
-            <div class="card-columns">
-              <div class="card text-center m-2" *ngFor='let item of listaCategoria'>
-                <div class="card-body">
-                  <div><img class="img-fluid" src='{{item.imagem}}' width="70" height="100"></div>
-                  <h5 class="card-title m-0">{{item.nome}}</h5>
-                  <p class="card-text mt-3">{{item.descricao}}</p>
+            <div *ngFor='let item of listaCategoria'>
+            <div class="product card mr-3 mt-5 ml-3 mb-5" >
+              <div class="imgbox">
+                <img class="img-fluid" src='{{item.imagem}}'>
+              </div>
+              <div class="details">
+                <h5 class="card-title m-0">{{item.nome}}</h5>
+                <p class="card-text mt-3">{{item.descricao}}</p>
 
-
-                </div>
               </div>
             </div>
+          </div>
             <!--/LISTA CATEGORIAS-->
           </div>
           <div class="tab-pane fade" id="Produtos" role="tabpanel">
             <!--LISTA PRODUTO DO PRODUTOR-->
-            <div class="card-columns" >
-              <div class="card text-center m-2" *ngFor='let item of usuario.produto'>
-                <div class="card-body">
-                  <div><img src='{{item.imagem}}' width="70" height="100"></div>
-                  <h5 class="card-title m-0">{{item.nome}}</h5>
-                  <h3 class="card-title m-0">{{categoria.nome}}</h3>
-                  <p class="card-text mt-3">{{item.descricao}}</p>
-
-                  <a class="text-info mr-3" [routerLink]="['/editar-produto', item.id]">Editar</a>
-                  <a class="text-danger" [routerLink]="['/delete-produto', item.id]">Apagar</a>
-                </div>
+            <div class="product card mr-3 mt-5 ml-3 mb-5" *ngFor='let item of usuario.produto'>
+              <div class="imgbox">
+                <img class="img img-fluid" src='{{item.imagem}}'>
+              </div>
+              <div class="details">
+                <p class="card-text m-auto">Categoria: {{item.categorias.nome}}</p>
+                <h5 class="card-title m-auto">{{item.nome}}</h5><span class="preco"> Preço: {{item.preco}}</span>
+                <p class="card-text m-auto">{{item.descricao}}</p>
+                <label class="label">Peso: {{item.peso}}</label>
+                <a class="card1" [routerLink]="['/editar-produto', item.id]">Editar</a>
+                <a class="card2" [routerLink]="['/delete-produto', item.id]">Apagar</a>
               </div>
             </div>
             <!--/LISTA PRODUTO DO PRODUTOR-->
