Add: modificações de menu

--- a/FrontEnd/eRural/src/app/menu/menu.component.html
+++ b/FrontEnd/eRural/src/app/menu/menu.component.html
@@ -10,6 +10,7 @@
                         height="31px" class="img-fluid"> <span class="sr-only">(página atual)</span></a>
             </li>
 
+            <!-- foi -->
             <!--Home-->
             <div class="d-flex justify-content-center">
                 <ul class=" menu navbar-nav mr-auto align-items-center">
